--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ erl_crash.dump
 # secrets file as long as you replace its contents by environment
 # variables.
 /config/prod.secret.exs
+
+### Intellij ###
+*.iml
+/.idea
+
+### Ignore mix lock files ###
+*.lock
